--- a/client/src/components/Login/login.css
+++ b/client/src/components/Login/login.css
@@ -18,7 +18,7 @@
 .login-form input {
   display: block;
   margin: 5px 0 10px;
-  padding: 5px;
+  padding: 15px;
   border: 1px solid #c0c0c0;
   border-radius: 5px;
   font-size: 16px;
@@ -27,10 +27,14 @@
 }
 
 .login-form button {
-  background: #d4c006;
+  background: linear-gradient(
+    90deg,
+    rgb(47, 79, 79) 0%,
+    rgba(47, 79, 79, 1) 100%
+  );
   color: #fff;
   padding: 5px 20px;
-  border: 1px solid #a8a607;
+  border: 1px solid #000000;
   border-radius: 5px;
   font-size: 16px;
   line-height: 20px;
