--- a/client/src/components/User/UserCrud.css
+++ b/client/src/components/User/UserCrud.css
@@ -1,10 +1,15 @@
 .UseCrud-form button {
-    background: #0d718d;
-    color: #fff;
-    padding: 5px 20px;
-    border: 1px solid #5a2703;
-    border-radius: 5px;
-    font-size: 16px;
-    line-height: 20px;
-    cursor: pointer;
-  }
+  background: #0d718d;
+  color: #fff;
+  padding: 5px 20px;
+  border: 1px solid #5a2703;
+  border-radius: 5px;
+  font-size: 16px;
+  line-height: 20px;
+  cursor: pointer;
+}
+
+.formi {
+  margin: 2px auto auto auto;
+  padding: 280px auto auto auto;
+}
