--- a/client/src/components/template/Logo.css
+++ b/client/src/components/template/Logo.css
@@ -1,3 +1,14 @@
+aside.logo {
+  background-color: var(--bg-dark);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+aside.logo img {
+  padding: 0px 15px;
+  width: 100%;
+}
 @media (max-width: 576px) {
   aside.logo img {
     width: 0px;
